# concat-project

./: README.md  main.py  pyproject.toml
docs/issues/: 0001-flexible-file-selection.md  0002-flexible-excludes-and-exclude-grep.md  0003-recursive-input-folder-selection.md
src/concat_project/: cli.py  config.py  file_collector.py  tree_renderer.py  writer.py
tests/: test_file_collector.py  test_tree_renderer.py
